[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-observability"
version = "0.1.0"
description = "Lightweight observability for AI agents — spans, token tracking, and cost analytics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "PHclaw", email = "phclaw@example.com" }]
keywords = ["ai", "agent", "observability", "tracing", "token", "cost"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/PHclaw/agent-observability"
Repository = "https://github.com/PHclaw/agent-observability"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_observability"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
